add removing of objects
